--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: Inicio
 layout: default
 background: '/img/bg-index.jpg'
 ---
@@ -9,9 +9,9 @@ background: '/img/bg-index.jpg'
 <div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
-      <h1 class="font-weight-bold mb-4 serif-font">Let me  teach you how to become successful online</h1>
-      <p class="lead mb-4">My name is Lyam and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
-      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
+      <h1 class="font-weight-bold mb-4 serif-font">Hello world, adelante, como si estuvieras en tu casa</h1>
+      <p class="lead mb-4">Mi nombre es Isaac, soy desarrollador móvil y este blog que tienes antes ti está construido a base de errores y experiencias personales</p>
+      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Conóceme</a>
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
       <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.svg">      
