Se ha cambiado la ilustración de la portada y se le ha añadido un color degradado

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ background: '/img/bg-index.jpg'
       <p class="lead mb-4">Mi nombre es Isaac, soy desarrollador móvil y este blog que tienes antes ti está construido a base de errores y experiencias personales</p>
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Conóceme</a>
     </div>
-    <div class="col-md-6 text-right pl-0 pl-lg-4">
-      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.svg">      
+    <div class="col-md-6 text-center pl-0 pl-lg-4">
+      <img class="intro" width="350" height="350" src="{{site.baseurl}}/assets/images/intro.svg">      
     </div>
   </div>
 </div>
