--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,20 +1,20 @@
 ---
 layout: page
-title: Contact
+title: Contacto
 permalink: "/contact/"
 comments: false
 ---
 
 <form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
+<p class="mb-4">Gracias por tu interés en ponerse en contacto conmigo (iba a hablar en plural, pero a quien quiero engañar, soy yo solo). Si tienes cualquier sugerencia, envía tu mensaje aquí, para todo lo demás, Twitter</p>
 <div class="form-group row">
 <div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Name*" required>
+<input class="form-control" type="text" name="name" placeholder="Nombre*" required>
 </div>
 <div class="col-md-6">
-<input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
+<input class="form-control" type="email" name="_replyto" placeholder="Correo electrónico*" required>
 </div>
 </div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Send">
+<textarea rows="8" class="form-control mb-3" name="message" placeholder="Mensaje*" required></textarea>    
+<input class="btn btn-dark" type="submit" value="Enviar">
 </form>
