Se han traducido algunos nombres de archivos y sus rutas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background: '/img/bg-index.jpg'
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Hello world, adelante, como si estuvieras en tu casa</h1>
       <p class="lead mb-4">Mi nombre es Isaac, soy desarrollador móvil y este blog que tienes antes ti está construido a base de errores y experiencias personales</p>
-      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Conóceme</a>
+      <a href="{{site.baseurl}}/coboceme" class="btn btn-dark text-white px-5 btn-lg">Conóceme</a>
     </div>
     <div class="col-md-6 text-center pl-0 pl-lg-4">
       <img class="intro" width="350" height="350" src="{{site.baseurl}}/assets/images/intro.svg">      
